    Platform.sdlVersionLinkedMajor: number
    Platform.sdlVersionLinkedMinor: number
    Platform.sdlVersionLinkedPatch: number
    Platform.osName: string, full name of the OS
    Platform.osFamily: string, one of "Windows", "Linux", "MacOSX", "FreeBSD", "Unknown"
 - Spring.SetWaterParams() can now be used without /cheat for modifying unsynced values.
 - Implemented gl.GetWaterRendering() to expose access to water rendering variables. Removed water rendering parameters from LuaConstGame, as they're no longer const.
 - Add start and hit position x, y, z arguments to ShieldPreDamaged callin

UI:
 - Add FPSClampPos config for whether the engine should verify the camera doesn't hit ground/go too far
   this and other FPS camera configs can be changed midgame and will affect the next frame drawn.
 - Add OverheadMaxHeightFactor config - a float multiplier for maximum overhead camera height.

-- 103.0 --------------------------------------------------------
General:
 - Fix & Improve performace
 - Add 'allowTake' modoption (default: true) to enable/disable /take (by lamer)
 - Add onlyLocal boolean value to modinfo.lua (default false)
   If true, spring won't listen for incoming connections when running
   this game unless GAME\OnlyLocal is specified in the start script.

Sim:
 - Add new UnitDef tag "buildingMask" and LuaSyncedCtrl function "SetSquareBuildingMask". (by ivand)
   Both used in conjunction to allow/disallow construction of certain unit types (via setting buildingMask)
   on certain tiles (via SetSquareBuildingMask). By default all tiles and buildings have mask of 1

Rendering:
 - Ghosted buildings are now consistent when changing specTeam/specFullView


Bugfixes:
 - Fix #5301 Units with restricted firearcs do not turn to aim
 - Fix #5302 extreme slowdown

-- 102.0 --------------------------------------------------------
General:
 - Fix & Improve LoS performance
 ! remove LuaModUICtrl config setting
 ! remove ClassicGroundMoveType