@@ -157,6 +157,7 @@ class LuaUnsyncedCtrl {
 		static int SetAtmosphere(lua_State* L);
 		static int SetSunLighting(lua_State* L);
 		static int SetSunDirection(lua_State* L);
+		static int SetMapRenderingParams(lua_State* L);
 
 		static int SendSkirmishAIMessage(lua_State* L);
 
