@@ -22,6 +22,7 @@ SET(sources_engine_Rendering
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/CubeMapHandler.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/DynWater.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/GrassDrawer.cpp"
+		"${CMAKE_CURRENT_SOURCE_DIR}/Env/MapRendering.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/RefractWater.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/SkyBox.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Env/SkyLight.cpp"
